--- a/info/linear_algebra.ipynb
+++ b/info/linear_algebra.ipynb
@@ -11,28 +11,40 @@
     "\n",
     "Вот основные концепции линейной алгебры:\n",
     "\n",
-    "### Векторы\n",
+    "## Векторы\n",
     "\n",
     "Вектор - это объект, имеющий направление и длину. Он может быть представлен в виде числовой последовательности или в графическом виде. Вектор может быть складываемым и умножаемым на число (скаляр).\n",
     "\n",
-    "### Матрицы\n",
+    "## Матрицы\n",
     "\n",
     "Матрица - это таблица чисел, расположенных в виде прямоугольной сетки. Она может использоваться для представления системы линейных уравнений и выполнения операций с векторами.\n",
     "\n",
-    "### Операции над векторами и матрицами\n",
+    "## Операции над векторами и матрицами\n",
     "\n",
     "Операции над векторами включают сложение, вычитание, скалярное произведение и векторное произведение. Операции над матрицами включают сложение, вычитание и умножение.\n",
     "\n",
-    "### Системы линейных уравнений\n",
+    "## Системы линейных уравнений\n",
     "\n",
     "Система линейных уравнений - это набор уравнений, каждое из которых имеет вид $a1x1 + a2x2 + ... + anxn = b$, где $a1, a2, ..., an$ - коэффициенты, $x1, x2, ..., xn$ - неизвестные и $b$ - константа. Решение системы линейных уравнений - это значения $x1, x2, ..., xn$, которые удовлетворяют всем уравнениям системы.\n",
     "\n",
-    "### Собственные значения и собственные векторы\n",
+    "## Собственные значения и собственные векторы\n",
     "\n",
-    "Собственный вектор - это вектор, который при умножении на матрицу сохраняет свое направление, но изменяет только свою длину.\n",
-    " Собственное значение - это число, на которое умножается собственный вектор при умножении на матрицу.\n",
+    "Собственными значениями и собственными векторами матрицы называются соответственно числа и векторы, которые остаются параллельными своему направлению при линейном преобразовании этой матрицы.\n",
     "\n",
-    "### Определитель\n",
+    "Для лучшего понимания этого понятия рассмотрим матричное умножение. Пусть дана квадратная матрица $A$ порядка n и вектор x. Тогда произведение $Ax$ будет новым вектором, который может иметь другую длину, направление и ориентацию, но лежать в той же плоскости, что и вектор x.\n",
+    "\n",
+    "Собственный вектор v матрицы $A$ - это такой ненулевой вектор, для которого Ax равен просто скалярному произведению этого вектора на какое-то число λ, которое называется собственным значением:\n",
+    "\n",
+    "$Av = λv$ \n",
+    "\n",
+    "Здесь λ - скаляр, называемый собственным значением матрицы $A$, а $v$ - ненулевой вектор, называемый собственным вектором, который соответствует λ.\n",
+    "\n",
+    "Другими словами, при умножении матрицы $A$ на собственный вектор $v$ мы получаем новый вектор, который параллелен вектору $v$ и имеет длину, равную произведению λ на длину вектора $v$.\n",
+    "\n",
+    "Собственные значения и собственные векторы матрицы являются важными в линейной алгебре, так как они позволяют нам понять, как матрица воздействует на пространство, в котором она действует, и как изменяются векторы при этом воздействии. Они также широко используются во многих областях математики и естественных наук, включая физику, экономику, инженерию и многие другие.\n",
+    "\n",
+    "\n",
+    "## Определитель\n",
     "\n",
     "Определитель - это числовая характеристика квадратной матрицы. Он вычисляется для матрицы определенного порядка и является скалярной величиной. \n",
     "Определитель матрицы A обозначается det(A) или |A|.\n",
@@ -62,16 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy as sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +196,75 @@
     "\n",
     "# транспонирование матрицы\n",
     "transposed_matrix = matrix.T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собственные значения:\n",
+      "[ 6.16227766e+00 -1.62277660e-01 -1.94711044e-16]\n",
+      "\n",
+      "Собственные векторы:\n",
+      "[[-0.39133557 -0.8247362  -0.70710678]\n",
+      " [-0.88634026  0.21848175  0.        ]\n",
+      " [-0.24750235  0.52160897  0.70710678]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Создание матрицы\n",
+    "A = np.array([[1, 2, 1],\n",
+    "              [3, 4, 3],\n",
+    "              [1, 1, 1]])\n",
+    "\n",
+    "# Вычисление собственных значений и собственных векторов\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+    "\n",
+    "print(\"Собственные значения:\")\n",
+    "print(eigenvalues)\n",
+    "\n",
+    "print(\"\\nСобственные векторы:\")\n",
+    "print(eigenvectors)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.plot(A)\n",
+    "# plt.plot(eigenvalues)\n",
+    "# plt.plot(eigenvectors)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Создание матрицы\n",
+    "A = np.array([[1, 2, 1],\n",
+    "              [3, 4, 3],\n",
+    "              [1, 1, 1]])\n",
+    "\n",
+    "print(np.linalg.det(A))"
    ]
   }
  ],
