--- a/info/linear_algebra.ipynb
+++ b/info/linear_algebra.ipynb
@@ -11,21 +11,31 @@
     "\n",
     "Вот основные концепции линейной алгебры:\n",
     "\n",
+    "--------------\n",
+    "\n",
     "## Векторы\n",
     "\n",
     "Вектор - это объект, имеющий направление и длину. Он может быть представлен в виде числовой последовательности или в графическом виде. Вектор может быть складываемым и умножаемым на число (скаляр).\n",
+    "\n",
+    "--------------\n",
     "\n",
     "## Матрицы\n",
     "\n",
     "Матрица - это таблица чисел, расположенных в виде прямоугольной сетки. Она может использоваться для представления системы линейных уравнений и выполнения операций с векторами.\n",
     "\n",
+    "--------------\n",
+    "\n",
     "## Операции над векторами и матрицами\n",
     "\n",
     "Операции над векторами включают сложение, вычитание, скалярное произведение и векторное произведение. Операции над матрицами включают сложение, вычитание и умножение.\n",
     "\n",
+    "--------------\n",
+    "\n",
     "## Системы линейных уравнений\n",
     "\n",
     "Система линейных уравнений - это набор уравнений, каждое из которых имеет вид $a1x1 + a2x2 + ... + anxn = b$, где $a1, a2, ..., an$ - коэффициенты, $x1, x2, ..., xn$ - неизвестные и $b$ - константа. Решение системы линейных уравнений - это значения $x1, x2, ..., xn$, которые удовлетворяют всем уравнениям системы.\n",
+    "\n",
+    "--------------\n",
     "\n",
     "## Собственные значения и собственные векторы\n",
     "\n",
@@ -41,8 +51,35 @@
     "\n",
     "Другими словами, при умножении матрицы $A$ на собственный вектор $v$ мы получаем новый вектор, который параллелен вектору $v$ и имеет длину, равную произведению λ на длину вектора $v$.\n",
     "\n",
+    "### Алгоритм\n",
+    "\n",
     "Собственные значения и собственные векторы матрицы являются важными в линейной алгебре, так как они позволяют нам понять, как матрица воздействует на пространство, в котором она действует, и как изменяются векторы при этом воздействии. Они также широко используются во многих областях математики и естественных наук, включая физику, экономику, инженерию и многие другие.\n",
     "\n",
+    "Рассмотрим матрицу $A = \\begin{pmatrix} 3 & -1 \\\\ 1 & 3 \\end{pmatrix}$. Чтобы найти ее собственные значения и собственные векторы, решим соответствующие уравнения.\n",
+    "\n",
+    "Сначала найдем собственные значения. Для этого нужно найти такие значения $\\lambda$, при которых определитель матрицы $A - \\lambda I$ равен нулю:\n",
+    "\n",
+    "$\\begin{pmatrix} 3 - \\lambda & 1 \\\\ -1 & 3 - \\lambda \\end{pmatrix} = 0$.\n",
+    "\n",
+    "Раскрывая определитель, получим квадратное уравнение:\n",
+    "\n",
+    "$\\lambda^2 - 6\\lambda + 8 = 0$\n",
+    "\n",
+    "Где: \n",
+    "\n",
+    "$\\lambda_1 = 2$, $\\lambda_2 = 4$\n",
+    "\n",
+    "Теперь найдем собственные векторы для каждого из найденных собственных значений. Для этого нужно решить систему уравнений $(A - \\lambda I)x = 0$.\n",
+    "\n",
+    "Для $\\lambda_1 = 2$:\n",
+    "\n",
+    "$(A - 2I)x = \\begin{pmatrix} 1 & -1 \\\\ 1 & 1 \\end{pmatrix} \\begin{pmatrix} x_1 \\\\ x_2 \\end{pmatrix} = \\begin{pmatrix} 0 \\\\ 0 \\end{pmatrix}$\n",
+    "\n",
+    "Собственный вектор $x = \\begin{pmatrix} 1 \\\\ 1 \\end{pmatrix}$\n",
+    "\n",
+    "Таким образом, собственное значение $\\lambda_1 = 2$ соответствует собственному вектору $x = \\begin{pmatrix} 1 \\\\ 1 \\end{pmatrix}$.\n",
+    "\n",
+    "--------------\n",
     "\n",
     "## Определитель\n",
     "\n",
