--- a/codes/neural/tensorflow_mnist.ipynb
+++ b/codes/neural/tensorflow_mnist.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Распознование рукописных чисел с помощью Tensorflow, Keras, и готового датасета MNIST"
+    "# Распознование рукописных чисел с помощью Tensorflow, Keras, и датасета MNIST"
    ]
   },
   {
