code added src upd.

--- a/codes/neural/tensorflow_mnist.ipynb
+++ b/codes/neural/tensorflow_mnist.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Распознование рукописных чисел с помощью Tensorflow, Keras, и датасета MNIST"
+    "# Распознование рукописных чисел с помощью Tensorflow, Keras, и готового датасета MNIST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.07512796,  0.3027011 ,  0.2795047 , -0.04141572,  0.21223599,\n",
-       "        -0.12732668, -0.12590942,  0.12331602,  0.07551985,  0.07619794]],\n",
+       "array([[ 0.21383293,  0.26968277,  0.04124872,  0.4202092 ,  0.70916367,\n",
+       "         0.87446445,  0.9291723 ,  0.31966612, -0.06879453, -0.07966696]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,52 +141,19 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "_Batch (пакет) - это группа примеров из набора данных, которые обрабатываются одновременно в процессе обучения нейронной сети._\n",
-    "\n",
-    "_Batch size (размер пакета) - это количество примеров из набора данных, которые обрабатываются одновременно в каждом пакете в процессе обучения нейронной сети._\n",
-    "\n",
-    "При обучении нейронной сети, данные разбиваются на пакеты определенного размера, и каждый пакет обрабатывается последовательно. Обработка пакетов позволяет нейронной сети обучаться на больших наборах данных, не требуя слишком большого объема памяти.\n",
-    "\n",
-    "Размер пакета может быть выбран в зависимости от доступных ресурсов, таких как объем доступной памяти и производительность оборудования, а также от требований конкретной задачи и оптимального размера пакета для этой задачи.\n",
-    "\n",
-    "Использование пакетов и настройка размера пакета является важным параметром при обучении нейронных сетей и может значительно повлиять на скорость обучения и качество модели.\n",
-    "\n",
-    "```python\n",
-    "import numpy as np\n",
-    "\n",
-    "# Представляем данные в виде тензора размерности (1000, ширина, высота, количество каналов)\n",
-    "data = np.zeros((1000, 32, 32, 3))\n",
-    "\n",
-    "# Размер пакета\n",
-    "batch_size = 64\n",
-    "\n",
-    "# Цикл по пакетам\n",
-    "for i in range(0, len(data), batch_size):\n",
-    "    batch = data[i:i+batch_size]\n",
-    "    # Обработка пакета, вычисление градиентов, обновление весов\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.08549158, 0.12474191, 0.12188165, 0.08842283, 0.11395252,\n",
-       "        0.0811435 , 0.08125857, 0.10425729, 0.09939141, 0.09945883]],\n",
+       "array([[0.08089852, 0.08554524, 0.0680751 , 0.09944173, 0.13275778,\n",
+       "        0.15662073, 0.16542782, 0.08992975, 0.06098136, 0.06032193]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.5115361"
+       "1.8539281"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,24 +240,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.3027 - accuracy: 0.9114\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.2923 - accuracy: 0.9149\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1425 - accuracy: 0.9571\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1421 - accuracy: 0.9576\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1080 - accuracy: 0.9670\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1069 - accuracy: 0.9680\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0882 - accuracy: 0.9735\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0855 - accuracy: 0.9737\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0757 - accuracy: 0.9763\n"
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0746 - accuracy: 0.9770\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x14ee3a7eb60>"
+       "<keras.callbacks.History at 0x15ebf42f2e0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,29 +276,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 - 0s - loss: 0.0728 - accuracy: 0.9785 - 318ms/epoch - 1ms/step\n"
+      "313/313 [==============================] - 0s 983us/step - loss: 0.0738 - accuracy: 0.9783\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.07277525961399078, 0.9785000085830688]"
+       "[0.07375681400299072, 0.9782999753952026]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.evaluate(x_test,  y_test, verbose=2)"
+    "model.evaluate(x_test,  y_test)"
    ]
   },
   {
@@ -344,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +322,7 @@
       "Пример 2: максимальная вероятность = 1.00, индекс класса = 2\n",
       "Пример 3: максимальная вероятность = 1.00, индекс класса = 1\n",
       "Пример 4: максимальная вероятность = 1.00, индекс класса = 0\n",
-      "Пример 5: максимальная вероятность = 0.98, индекс класса = 4\n"
+      "Пример 5: максимальная вероятность = 1.00, индекс класса = 4\n"
      ]
     }
    ],
@@ -371,6 +338,126 @@
     "    max_prob = np.max(probabilities[i])\n",
     "    max_index = np.argmax(probabilities[i])\n",
     "    print(f\"Пример {i + 1}: максимальная вероятность = {max_prob:.2f}, индекс класса = {max_index}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Версия с наследованием класса"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.1379 - accuracy: 0.9588\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0436 - accuracy: 0.9871\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0234 - accuracy: 0.9925\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0143 - accuracy: 0.9955\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0097 - accuracy: 0.9967\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x15ec1909c30>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "mnist = tf.keras.datasets.mnist\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+    "\n",
+    "\n",
+    "# Add a channels dimension\n",
+    "x_train = x_train[..., tf.newaxis].astype(\"float32\")\n",
+    "x_test = x_test[..., tf.newaxis].astype(\"float32\")\n",
+    "\n",
+    "train_ds = tf.data.Dataset.from_tensor_slices(\n",
+    "    (x_train, y_train)).shuffle(10000).batch(32)\n",
+    "\n",
+    "test_ds = tf.data.Dataset.from_tensor_slices((x_train, y_train)).batch(32)\n",
+    "\n",
+    "class MyModel(tf.keras.Model):\n",
+    "  def __init__(self):\n",
+    "    super(MyModel, self).__init__()\n",
+    "    self.conv1 = tf.keras.layers.Conv2D(32, 3, activation='relu')\n",
+    "    self.flatten = tf.keras.layers.Flatten()\n",
+    "    self.d1 = tf.keras.layers.Dense(128, activation='relu')\n",
+    "    self.d2 = tf.keras.layers.Dense(10)\n",
+    "\n",
+    "  def call(self, x):\n",
+    "    x = self.conv1(x)\n",
+    "    x = self.flatten(x)\n",
+    "    x = self.d1(x)\n",
+    "    return self.d2(x)\n",
+    "\n",
+    "model = MyModel()\n",
+    "\n",
+    "loss_object = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "optimizer = tf.keras.optimizers.Adam()\n",
+    "\n",
+    "model.compile(optimizer=optimizer,\n",
+    "              loss=loss_object,\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs=5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "----------------\n",
+    "_Batch (пакет) - это группа примеров из набора данных, которые обрабатываются одновременно в процессе обучения нейронной сети._\n",
+    "\n",
+    "_Batch size (размер пакета) - это количество примеров из набора данных, которые обрабатываются одновременно в каждом пакете в процессе обучения нейронной сети._\n",
+    "\n",
+    "При обучении нейронной сети, данные разбиваются на пакеты определенного размера, и каждый пакет обрабатывается последовательно. Обработка пакетов позволяет нейронной сети обучаться на больших наборах данных, не требуя слишком большого объема памяти.\n",
+    "\n",
+    "Размер пакета может быть выбран в зависимости от доступных ресурсов, таких как объем доступной памяти и производительность оборудования, а также от требований конкретной задачи и оптимального размера пакета для этой задачи.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "\n",
+    "# Представляем данные в виде тензора размерности (длина тензора, ширина, высота, количество каналов)\n",
+    "data = np.zeros((1000, 32, 32, 3))\n",
+    "\n",
+    "# Размер пакета\n",
+    "batch_size = 64\n",
+    "\n",
+    "# Цикл по пакетам\n",
+    "for i in range(0, len(data), batch_size):\n",
+    "    batch = data[i:i+batch_size]\n",
+    "    # Обработка пакета, вычисление градиентов, обновление весов\n",
+    "\n",
+    "```\n",
+    "----------------\n"
    ]
   }
  ],
