--- a/codes/neural/tensorflow_mnist.ipynb
+++ b/codes/neural/tensorflow_mnist.ipynb
@@ -350,34 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.1379 - accuracy: 0.9588\n",
-      "Epoch 2/5\n",
-      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0436 - accuracy: 0.9871\n",
-      "Epoch 3/5\n",
-      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0234 - accuracy: 0.9925\n",
-      "Epoch 4/5\n",
-      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0143 - accuracy: 0.9955\n",
-      "Epoch 5/5\n",
-      "1875/1875 [==============================] - 39s 21ms/step - loss: 0.0097 - accuracy: 0.9967\n"
+      "1875/1875 [==============================] - 40s 21ms/step - loss: 0.1378 - accuracy: 0.9587\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x15ec1909c30>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -422,7 +403,51 @@
     "              loss=loss_object,\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(x_train, y_train, epochs=5)"
+    "model.fit(x_train, y_train, epochs=1)\n",
+    "\n",
+    "\n",
+    "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
+    "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_accuracy')\n",
+    "\n",
+    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
+    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_accuracy')\n",
+    "\n",
+    "@tf.function\n",
+    "def train_step(images, labels):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "      # training=True is only needed if there are layers with different\n",
+    "      # behavior during training versus inference (e.g. Dropout).\n",
+    "      predictions = model(images, training=True)\n",
+    "      loss = loss_object(labels, predictions)\n",
+    "    gradients = tape.gradient(loss, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "\n",
+    "    train_loss(loss)\n",
+    "    train_accuracy(labels, predictions)\n",
+    "\n",
+    "\n",
+    "EPOCHS = 5\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    # Reset the metrics at the start of the next epoch\n",
+    "    train_loss.reset_states()\n",
+    "    train_accuracy.reset_states()\n",
+    "    test_loss.reset_states()\n",
+    "    test_accuracy.reset_states()\n",
+    "\n",
+    "    for images, labels in train_ds:\n",
+    "        train_step(images, labels)\n",
+    "\n",
+    "    for test_images, test_labels in test_ds:\n",
+    "        test_step(test_images, test_labels)\n",
+    "\n",
+    "    print(\n",
+    "      f'Epoch {epoch + 1}, '\n",
+    "      f'Loss: {train_loss.result()}, '\n",
+    "      f'Accuracy: {train_accuracy.result() * 100}, '\n",
+    "      f'Test Loss: {test_loss.result()}, '\n",
+    "      f'Test Accuracy: {test_accuracy.result() * 100}'\n",
+    "    )"
    ]
   },
   {
